--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  line-height: 1.3;
-  font-family: "Ubuntu", serif;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
@@ -22,11 +21,15 @@ body {
   margin: 0;
 }
 
-h1 {
+header {
+  margin: 0;
   background-color: #18294f;
   color: #fff;
+}
+
+header h1 {
   margin: 0;
-  padding: .30em;
+  padding: .3em;
   text-align: center;
   font-weight: bold;
   font-size: 2rem;
@@ -41,15 +44,20 @@ nav ul {
   padding-bottom: 0;
 }
 
-
 nav a {
   text-decoration: none;
   color: #6c8fe0;
+  white-space: nowrap;
 }
 
 li {
   padding: .3em 0 .75em;
   justify-content: center;
+}
+
+nav a:hover {
+  background-color: #6c8fe0;
+  color: #fff;
 }
 
 @media only screen and (min-width: 25em) {
@@ -76,8 +84,12 @@ li {
   }
 
   nav li {
-    margin: 0 .75rem;
+    margin: 0;
     width: 25%;
+  }
+
+  li {
+    padding: .3em 0 .75em;
   }
 
 }
@@ -91,17 +103,31 @@ li {
 
   header {
     display: flex;
-    flex-wrap: nowrap;
+    justify-content: space-between;
   }
 
-  nav li {
+  h1 {
     width: 50%;
   }
 
+  nav {
+    width: 85%;
+  }
+
+}
+
 @media only screen and (min-width: 90em) {
 
-    html {
-      font-size: 130%;
+  html {
+    font-size: 130%;
+  }
+
+  h2 {
+    text-align: left;
+  }
+
+  ul {
+    flex-wrap: nowrap;
   }
 
 }
